Styling Additions, Header, and Dark Mode
-Added new character images
-Added icons for functionality
-Added functionality for smooth scrolling
-Added dark mode functionality
-Ensured consistency for elements dynamically created while dark mode is active
-Added a title to the character list box
-Applied ids to partner divs
-Increased size of Pokemon name text
-Added content to header
-Ensured consistent sizing of images

--- a/sass/components/_common-styles.scss
+++ b/sass/components/_common-styles.scss
@@ -1,5 +1,9 @@
 @use "../abstracts/colours" as c;
 
+body.dark-mode {
+    background-color: rgb(83, 83, 83);
+}
+
 .select-con {
     display: flex;
     justify-content: center;
