Suggestion Page Styling
-Styled content on the suggestion page for better viewing and experience
-Added more Pokemon images
-Minor text fix

--- a/sass/pages/_suggestions.scss
+++ b/sass/pages/_suggestions.scss
@@ -6,16 +6,30 @@
     margin-bottom: 20px;
 }
 
+#rule-con {
+    h3 {
+        text-align: center;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+}
+
 .example-list {
     margin-block-end: 0;
 }
 
 .rule-checkbox {
-    margin-top: 15px;
+    margin-top: 10px;
 }
 
-#accept-all {
-    display: none;
+#rule-error {
+    margin-top: 20px;
+    text-align: center;
+}
+
+#accept-button {
+    display: flex;
+    justify-self: center;
 }
 
 #suggest-con {
