--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,3 +1,14 @@
+a {
+    transition: all ease-in-out 0.5s;
+    text-decoration: none;
+    &:hover {
+        text-decoration: underline;
+    }
+    &:visited {
+        color: black;
+    }
+}
+
 .upvote, .vote-count {
     font-size: 20px;
 }
