--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -27,7 +27,7 @@ header {
 
 #login-con {
     padding-left: 5px;
-    padding-right: 5px;
+    margin-right: 10px;
     display: none;
     align-items: center;
     a {
@@ -53,6 +53,46 @@ header {
     }
 
     margin-right: 20px;
+}
+
+header img {
+    max-height: 40px;
+    margin-left: 10px;
+}
+
+#links-con {
+    display: flex;
+    align-items: center;
+    margin-right: 10px;
+}
+
+#links {
+    display: flex;
+    margin-inline-start: 0;
+    margin-inline-end: 0;
+    margin-block-end: 0;
+    margin-block-start: 0;
+    li {
+        list-style-type: none;
+        margin-left: 5px;
+        margin-right: 5px;
+    }
+}
+
+#primary-header {
+    position: relative;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+#primary-header::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 2.5%; 
+    width: 95%;
+    height: 1px;
+    background-color: black;
 }
 
 @media screen and (min-width: 768px) {
