--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -108,6 +108,11 @@
     margin-top: 10px;
 }
 
+#submit-poke-text {
+    margin-top: 10px;
+    text-align: center;
+}
+
 ul {
     padding-inline-start: 25px;
     margin-block-start: 10px;
