Error Handling and Consistency
-Added an error message area to each of the pages
-Added catch statements to all fetches
-Added slashes to header for consistent look and spacing
-Added areas for error handling to login pages
-Styled the pages so that footer will always be at the bottom
-Styling fixes to fix the errors caused by footer staying at bottom
-Deleted the console logs in javascript files

--- a/sass/components/_common-styles.scss
+++ b/sass/components/_common-styles.scss
@@ -2,6 +2,14 @@
 
 body {
     position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 100vh;
+}
+
+section {
+    width: 100%;
 }
 
 body.dark-mode {
