--- a/sass/components/_index.scss
+++ b/sass/components/_index.scss
@@ -1,4 +1,5 @@
 @forward "common-styles";
 @forward "header";
 @forward "footer";
-@forward "common-login"
+@forward "common-login";
+@forward "error-message";
