--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -64,7 +64,6 @@
 
 .upvote {
     cursor: pointer;
-    transition: all ease-in-out 0.5s;
     &:hover {
         opacity: 70%;
     }
@@ -98,6 +97,7 @@
     cursor: pointer;
     transition: all ease-in-out 0.5s;
     margin-bottom: 10px;
+    margin-right: 5px;
     &:hover {
         opacity: 70%;
         text-decoration: underline;
