Styling Fixes- Index Page
-Fixed size of images on mobile
-Center aligned Pokemon names
-Added a bit of margin to the Pokemon-names
-Hid links and border for mobile viewing in favour of hamburger menu styling (future push)
-Centered logo for mobile

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -17,6 +17,12 @@ a {
     font-size: 20px;
 }
 
+.pokemon-name {
+    text-align: center;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
 #top-text.dark-mode, #update-text.dark-mode {
     color: white;
 }
