--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -152,6 +152,37 @@ ul {
     width: 200px;
 }
 
+#patch-open {
+    cursor: pointer;
+    text-decoration: underline;
+    transition: all ease-in-out 0.5s;
+    &:hover {
+        opacity: 70%;
+    }
+}
+
+#update-info-con {
+    padding-top: 20px;
+    width: 100%;
+}
+
+#update-title {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+#update-info {
+    overflow: scroll;
+    height: 90vh;
+    margin-left: 15px;
+    h3 {
+        margin-bottom: 10px;
+    }
+    p {
+        margin-bottom: 20px;
+    }
+}
+
 @media screen and (min-width: 428px) {
     .pokemon-image {
         padding: 10px;
