--- a/sass/pages/_lightboxes.scss
+++ b/sass/pages/_lightboxes.scss
@@ -39,6 +39,7 @@ label {
 
 .close-button {
     cursor: pointer;
+    margin-right: 5px;
     transition: all ease-in-out 0.5s;
     &:hover {
         opacity: 70%;
