--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -3,4 +3,17 @@ footer {
     background-color: rgb(222, 222, 222);
     padding-top: 10px;
     padding-bottom: 10px;
+    a {
+        margin-left: 5px;
+        margin-right: 5px;
+        text-decoration: underline;
+        color: blue;
+        transition: all ease-in-out 0.5s;
+        &:visited {
+            color: blue;
+        }
+        &:hover {
+            opacity: 70%;
+        }
+    }
 }
