--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,3 +1,13 @@
+p, a, li, option, select, label, button, input, textarea {
+    font-family: "Public Sans", "Arial", sans-serif;
+    font-weight: 400;
+}
+
+h3 {
+    font-family: "Public Sans", "Arial", sans-serif;
+    font-weight: 600;
+}
+
 a {
     transition: all ease-in-out 0.5s;
     text-decoration: none;
