--- a/sass/pages/_profile.scss
+++ b/sass/pages/_profile.scss
@@ -159,10 +159,19 @@
     padding-bottom: 10px;
 }
 
+#pokeball-title {
+    margin: 5px;
+    text-align: center;
+}
+
 .pokeball-icon {
     width: 50px;
     cursor: pointer;
     margin: 5px;
+    &:hover {
+        border: 2px solid black;
+        border-radius: 10px;
+    }
 }
 
 #icon-con {
