--- a/sass/components/_common-styles.scss
+++ b/sass/components/_common-styles.scss
@@ -115,6 +115,7 @@ body.dark-mode {
     margin-bottom: 20px;
     transition: all ease-in-out 0.5s;
     cursor: pointer;
+    font-size: 16px;
     &:hover {
         opacity: 70%;
         text-decoration: underline;
