--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -3,6 +3,8 @@ footer {
     background-color: rgb(222, 222, 222);
     padding-top: 10px;
     padding-bottom: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
     a {
         margin-left: 5px;
         margin-right: 5px;
