--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -27,7 +27,7 @@
 }
 
 .character-image {
-    width: 120px;
+    max-height: 300px;
 }
 
 #character-list, #character-list-title {
@@ -69,6 +69,7 @@
 
 .upvote {
     cursor: pointer;
+    margin-bottom: 5px;
     &:hover {
         opacity: 70%;
     }
@@ -101,7 +102,7 @@
 .character {
     cursor: pointer;
     transition: all ease-in-out 0.5s;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     margin-right: 5px;
     &:hover {
         opacity: 70%;
@@ -114,7 +115,7 @@
 }
 
 #submit-poke-text {
-    margin-top: 10px;
+    margin-top: 15px;
     text-align: center;
 }
 
@@ -219,6 +220,7 @@ ul {
 
     #character-list-con {
         display: flex;
+        margin-left: 10px;
     }
 
     #character-image-box {
@@ -232,4 +234,7 @@ ul {
     #display-div {
         flex-direction: row;
     }
+}
+
+@media screen and (min-width: 1200px) {
 }
