--- a/sass/pages/_lightboxes.scss
+++ b/sass/pages/_lightboxes.scss
@@ -25,8 +25,10 @@
 }
 
 label {
-    margin-top: 20px;
     margin-bottom: 5px;
+    &:not(#contact-form label) {
+        margin-top: 20px;
+    }
 }
 
 #submit-pokemon {
@@ -39,7 +41,7 @@ label {
 
 .close-button {
     cursor: pointer;
-    margin-right: 5px;
+    margin-right: 10px;
     transition: all ease-in-out 0.5s;
     &:hover {
         opacity: 70%;
