--- a/sass/pages/_suggestions.scss
+++ b/sass/pages/_suggestions.scss
@@ -7,6 +7,8 @@
 }
 
 #rule-con {
+    padding-left: 10px;
+    padding-right: 10px;
     h3 {
         text-align: center;
         margin-top: 10px;
