--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -1,8 +1,7 @@
 @forward "home";
-@forward "home-dark";
 @forward "lightboxes";
 @forward 'suggestions';
-@forward 'login';
+@forward 'login-register';
 @forward 'profile';
 @forward 'contact';
 @forward 'privacy';
