--- a/sass/pages/_privacy.scss
+++ b/sass/pages/_privacy.scss
@@ -1,6 +1,7 @@
 #privacy-info-con {
-    padding-left: 5px;
-    padding-right: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-top: 20px;
 }
 
 #privacy-title {
