--- a/sass/abstracts/_colours.scss
+++ b/sass/abstracts/_colours.scss
@@ -1,18 +1,31 @@
-$bug: #91A119;
-$dark: #624D4E;
-$dragon: #5060E1;
-$electric: #FAC000;
-$fairy: #EF70EF;
-$fighting: #FF8000;
-$fire: #E62829;
-$flying: #81B9EF;
-$ghost: #704170;
-$grass: #3FA129;
-$ground: #915121;
-$ice: #3DCEF3;
-$normal: #9FA19F;
-$poison: #9141CB;
-$psychic: #EF4179;
-$rock: #AFA981;
-$steel: #60A1B8;
-$water: #2980EF;
+$bug: #91a119a2;
+$dark: #624D4Ea2;
+$dragon: #5060E1a2;
+$electric: #FAC000a2;
+$fairy: #EF70EFa2;
+$fighting: #FF8000a2;
+$fire: #E62829a2;
+$flying: #81B9EFa2;
+$ghost: #704170a2;
+$grass: #3FA129a2;
+$ground: #915121a2;
+$ice: #3DCEF3a2;
+$normal: #9FA19Fa2;
+$poison: #9141CBa2;
+$psychic: #EF4179a2;
+$rock: #AFA981a2;
+$steel: #60A1B8a2;
+$water: #2980EFa2;
+$basegreen: #49a55b;
+$accentyellow: #f7cb5adf;
+$primarygray: #92C494;
+// $primarygray: #d0d9e4;
+$secondarygray: rgb(242, 242, 242);
+// $dmprimarygray: #7d8c9d;
+$dmprimarygray: #538555;
+$dmsecondarygray: rgb(69, 69, 69);
+$darkbox: rgb(100, 100, 100);
+$graytext: rgb(175, 175, 175);
+// $primarygray: #6f7396;
+// $secondarygray: rgb(220, 220, 220);
+// $white: rgb(239, 239, 239)
