--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,3 +1,5 @@
+@use "../abstracts/colours" as c;
+
 #character-list-con {
     border: 1px solid black;
     margin-top: 10px;
@@ -10,12 +12,86 @@
 
 #character-list-con {
     height: 550px;
-    overflow: scroll;
+    overflow-y: scroll;
     position: sticky;
     top: 10px;
     display: none;
     grid-template-rows: auto auto;
     flex-direction: column;
+
+    &::-webkit-scrollbar {
+        width: 12px;
+        height: 12px;
+    }
+
+    &::-webkit-scrollbar-track {
+        background: #f1f1f1;
+    }
+  
+     &::-webkit-scrollbar-thumb {
+        background: c.$dmprimarygray;
+    }
+  
+    &::-webkit-scrollbar-thumb:hover {
+        background: c.$primarygray;
+    }
+
+    &::-webkit-scrollbar-button {
+        background-color: c.$primarygray;
+    }
+  
+    &::-webkit-scrollbar-button:vertical:decrement {
+        background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"><polygon points="8,2 14,10 2,10" fill="white"/></svg>');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 9px;
+        background-color: c.$dmprimarygray;
+        transition: all ease-in-out 0.5s;
+        &:hover {
+            background-color: c.$primarygray;
+        }
+    }
+    
+    &::-webkit-scrollbar-button:vertical:increment {
+        background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"><polygon points="2,6 14,6 8,14" fill="white"/></svg>') no-repeat center center;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 9px;
+        background-color: c.$dmprimarygray;
+        transition: all ease-in-out 0.5s;
+        &:hover {
+            background-color: c.$primarygray;
+        }
+    }
+
+    &::-webkit-scrollbar-button:horizontal:decrement {
+        background: url('data:image/svg+xml,%3Csvg xmlns%3D%22http%3A//www.w3.org/2000/svg%22 width%3D%2216%22 height%3D%2216%22%3E%3Cpolygon points%3D%222%2C8 10%2C2 10%2C14%22 fill%3D%22white%22/%3E%3C/svg%3E') no-repeat center center;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 9px;
+        background-color: c.$dmprimarygray;
+        transition: all ease-in-out 0.5s;
+        &:hover {
+            background-color: c.$primarygray;
+        }
+    }
+    
+    &::-webkit-scrollbar-button:horizontal:increment {
+        background: url('data:image/svg+xml,%3Csvg xmlns%3D%22http%3A//www.w3.org/2000/svg%22 width%3D%2216%22 height%3D%2216%22%3E%3Cpolygon points%3D%226%2C2 14%2C8 6%2C14%22 fill%3D%22white%22/%3E%3C/svg%3E') no-repeat center center;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 9px;
+        background-color: c.$dmprimarygray;
+        transition: all ease-in-out 0.5s;
+        &:hover {
+            background-color: c.$primarygray;
+        }
+    }
+
+    &::-webkit-scrollbar-button:end:decrement,
+    &::-webkit-scrollbar-button:start:increment, &::-webkit-scrollbar-button:horizontal:increment, &::-webkit-scrollbar-button:horizontal:decrement {
+        display: none;
+    }
 }
 
 #character-image-box {
@@ -86,7 +162,7 @@
     position: sticky;
     top: 0;
     z-index: 10;
-    background-color: rgb(222, 222, 222);
+    background-color: c.$primarygray;
 }
 
 #character-box {
@@ -131,7 +207,7 @@ ul {
     padding-top: 5px;
     padding-bottom: 5px;
     font-weight: bold;
-    background-color: rgb(222, 222, 222);
+    background-color: c.$primarygray;
 }
 
 #loading-text {
@@ -173,7 +249,7 @@ ul {
 }
 
 #update-info {
-    overflow: scroll;
+    overflow-y: scroll;
     height: 90vh;
     margin-left: 15px;
     h3 {
@@ -181,6 +257,79 @@ ul {
     }
     p {
         margin-bottom: 20px;
+    }
+
+    &::-webkit-scrollbar {
+        width: 12px;
+        height: 12px;
+    }
+
+    &::-webkit-scrollbar-track {
+        background: #f1f1f1;
+    }
+  
+     &::-webkit-scrollbar-thumb {
+        background: c.$dmprimarygray;
+    }
+  
+    &::-webkit-scrollbar-thumb:hover {
+        background: c.$primarygray;
+    }
+
+    &::-webkit-scrollbar-button {
+        background-color: c.$primarygray;
+    }
+  
+    &::-webkit-scrollbar-button:vertical:decrement {
+        background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"><polygon points="8,2 14,10 2,10" fill="white"/></svg>');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 9px;
+        background-color: c.$dmprimarygray;
+        transition: all ease-in-out 0.5s;
+        &:hover {
+            background-color: c.$primarygray;
+        }
+    }
+    
+    &::-webkit-scrollbar-button:vertical:increment {
+        background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"><polygon points="2,6 14,6 8,14" fill="white"/></svg>') no-repeat center center;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 9px;
+        background-color: c.$dmprimarygray;
+        transition: all ease-in-out 0.5s;
+        &:hover {
+            background-color: c.$primarygray;
+        }
+    }
+
+    &::-webkit-scrollbar-button:horizontal:decrement {
+        background: url('data:image/svg+xml,%3Csvg xmlns%3D%22http%3A//www.w3.org/2000/svg%22 width%3D%2216%22 height%3D%2216%22%3E%3Cpolygon points%3D%222%2C8 10%2C2 10%2C14%22 fill%3D%22white%22/%3E%3C/svg%3E') no-repeat center center;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 9px;
+        background-color: c.$dmprimarygray;
+        transition: all ease-in-out 0.5s;
+        &:hover {
+            background-color: c.$primarygray;
+        }
+    }
+    
+    &::-webkit-scrollbar-button:horizontal:increment {
+        background: url('data:image/svg+xml,%3Csvg xmlns%3D%22http%3A//www.w3.org/2000/svg%22 width%3D%2216%22 height%3D%2216%22%3E%3Cpolygon points%3D%226%2C2 14%2C8 6%2C14%22 fill%3D%22white%22/%3E%3C/svg%3E') no-repeat center center;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 9px;
+        background-color: c.$dmprimarygray;
+        transition: all ease-in-out 0.5s;
+        &:hover {
+            background-color: c.$primarygray;
+        }
+    }
+
+    &::-webkit-scrollbar-button:horizontal:increment, &::-webkit-scrollbar-button:horizontal:decrement {
+        display: none;
     }
 }
 
