--- a/sass/pages/_profile.scss
+++ b/sass/pages/_profile.scss
@@ -1,3 +1,5 @@
+@use "../abstracts/colours" as c;
+
 #profile-info-con {
     margin-top: 20px;
 }
@@ -106,7 +108,7 @@
     border-top-left-radius: 100px;
     border-top-right-radius: 100px;
     width: 100%;
-    background-color: red;
+    background-color: c.$primarygray;
     overflow: hidden;
 }
 
@@ -118,10 +120,6 @@
 #middle-tab {
     margin-left: 10px;
     margin-right: 10px;
-}
-
-.profile-tab:first-of-type {
-    background-color: rgb(222, 222, 222);
 }
 
 #profile-text-con {
@@ -213,6 +211,10 @@
     width: 100px;
     align-self: center;
     margin-top: 10px;
+}
+
+.tab-selected {
+    background-color: #dedede;
 }
 
 @media screen and (min-width: 768px) {
