--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -15,6 +15,7 @@ h3 {
 a {
     transition: all ease-in-out 0.5s;
     text-decoration: none;
+    color: black;
     &:hover {
         text-decoration: underline;
     }
