--- a/sass/pages/_profile.scss
+++ b/sass/pages/_profile.scss
@@ -217,6 +217,11 @@
     background-color: #dedede;
 }
 
+#profile-error-con {
+    margin-bottom: 10px;
+    text-align: center;
+}
+
 @media screen and (min-width: 768px) {
     .profile-info-con {
         align-items: center;
