--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -241,6 +241,11 @@ ul {
 #update-info-con {
     padding-top: 20px;
     width: 100%;
+    // border: 3px solid black;
+    // margin-top: 10px;
+    // padding: 10px;
+    // border-radius: 20px;
+    // background-color: rgba(89, 148, 92, 0.5);
 }
 
 #update-title {
@@ -337,6 +342,132 @@ ul {
     cursor: pointer;
 }
 
+#head-info-con {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 15px;
+    margin-bottom: 5px;
+    p {
+        margin-left: 2%;
+        margin-right: 2%;
+    }
+}
+
+#update-text {
+    text-align: right;
+}
+
+#home-about-text {
+    cursor: pointer;
+    transition: all ease-in-out 0.5s;
+}
+
+#primary-info-con {
+    left: 12.5%;
+    height: 97.5%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border: 5px solid black;
+    border-radius: 20px;
+    width: 75%;
+    display: flex;
+    flex-direction: column;
+    .mobile-close {
+        width: 100%;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        p {
+            text-align: right;
+        }
+    }
+}
+
+#welcome-con {
+    padding: 15px;
+    overflow-y: scroll;
+    h3 {
+        text-align: center;
+        margin-bottom: 10px;
+    }
+
+    p {
+        margin-bottom: 10px;
+    }
+
+    &::-webkit-scrollbar {
+        width: 12px;
+        height: 12px;
+    }
+
+    &::-webkit-scrollbar-track {
+        background: #f1f1f1;
+    }
+  
+     &::-webkit-scrollbar-thumb {
+        background: c.$dmprimarygray;
+    }
+  
+    &::-webkit-scrollbar-thumb:hover {
+        background: c.$primarygray;
+    }
+
+    &::-webkit-scrollbar-button {
+        background-color: c.$primarygray;
+    }
+  
+    &::-webkit-scrollbar-button:vertical:decrement {
+        background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"><polygon points="8,2 14,10 2,10" fill="white"/></svg>');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 9px;
+        background-color: c.$dmprimarygray;
+        transition: all ease-in-out 0.5s;
+        &:hover {
+            background-color: c.$primarygray;
+        }
+    }
+    
+    &::-webkit-scrollbar-button:vertical:increment {
+        background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"><polygon points="2,6 14,6 8,14" fill="white"/></svg>') no-repeat center center;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 9px;
+        background-color: c.$dmprimarygray;
+        transition: all ease-in-out 0.5s;
+        &:hover {
+            background-color: c.$primarygray;
+        }
+    }
+
+    &::-webkit-scrollbar-button:horizontal:decrement {
+        background: url('data:image/svg+xml,%3Csvg xmlns%3D%22http%3A//www.w3.org/2000/svg%22 width%3D%2216%22 height%3D%2216%22%3E%3Cpolygon points%3D%222%2C8 10%2C2 10%2C14%22 fill%3D%22white%22/%3E%3C/svg%3E') no-repeat center center;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 9px;
+        background-color: c.$dmprimarygray;
+        transition: all ease-in-out 0.5s;
+        &:hover {
+            background-color: c.$primarygray;
+        }
+    }
+    
+    &::-webkit-scrollbar-button:horizontal:increment {
+        background: url('data:image/svg+xml,%3Csvg xmlns%3D%22http%3A//www.w3.org/2000/svg%22 width%3D%2216%22 height%3D%2216%22%3E%3Cpolygon points%3D%226%2C2 14%2C8 6%2C14%22 fill%3D%22white%22/%3E%3C/svg%3E') no-repeat center center;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 9px;
+        background-color: c.$dmprimarygray;
+        transition: all ease-in-out 0.5s;
+        &:hover {
+            background-color: c.$primarygray;
+        }
+    }
+
+    &::-webkit-scrollbar-button:horizontal:increment, &::-webkit-scrollbar-button:horizontal:decrement {
+        display: none;
+    }
+}
+
 @media screen and (min-width: 428px) {
     .pokemon-image {
         padding: 10px;
@@ -348,6 +479,11 @@ ul {
 @media screen and (min-width: 768px) {
     .partner-div {
         padding-right: 50px;
+    }
+
+    #primary-info-con {
+        width: 50%;
+        left: 25%;
     }
 
     .character-image {
