--- a/sass/abstracts/_colours.scss
+++ b/sass/abstracts/_colours.scss
@@ -26,6 +26,8 @@ $dmprimarygray: #538555;
 $dmsecondarygray: rgb(69, 69, 69);
 $darkbox: rgb(100, 100, 100);
 $graytext: rgb(175, 175, 175);
+$lightboxgreen: rgba(52, 90, 54, 0.975);
+$lightboxgray: #424242da;
 // $primarygray: #6f7396;
 // $secondarygray: rgb(220, 220, 220);
 // $white: rgb(239, 239, 239)
