--- a/sass/components/_hamburger.scss
+++ b/sass/components/_hamburger.scss
@@ -8,14 +8,19 @@
     visibility: hidden;
     opacity: 0;
     transition: all ease-in-out 0.5s;
+    z-index: 10000;
+    .mobile-close {
+        width: 100%;
+        margin-bottom: 20px;
+    }
     .close-button {
-        margin-right: 5px;
-        text-align: center;
+        margin-top: 10px;
+        text-align: right;
+        margin-right: 10px;
     }
 }
 
 .mobile-links {
-    margin-top: 10%;
     width: 100%;
     display: flex;
     flex-direction: column;
