--- a/sass/pages/_login-register.scss
+++ b/sass/pages/_login-register.scss
@@ -10,7 +10,6 @@
     align-items: center;
     h3 {
         text-align: center;
-        margin-bottom: 10px;
     }
 }
 
@@ -40,4 +39,12 @@
 
 #register-login-link {
     text-decoration: underline!important;
+}
+
+@media screen and (min-width: 768px) {
+    #login-form-div, #register-form-div {
+        h3 {
+            margin-bottom: 10px;
+        }
+    }
 }
