--- a/sass/pages/_profile.scss
+++ b/sass/pages/_profile.scss
@@ -222,6 +222,27 @@
     text-align: center;
 }
 
+#profile-info-con {
+    visibility: hidden;
+}
+
+.empty-info {
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 5px;
+    margin-right: 5px;
+    width: 100%;
+}
+
+#no-exist-text {
+    margin-left: 5px;
+    margin-right: 5px;
+    text-align: center;
+    font-size: 16px;
+    margin-top: 10px;
+}
+
 @media screen and (min-width: 768px) {
     .profile-info-con {
         align-items: center;
